--- a/index.html
+++ b/index.html
@@ -1,13 +1,24 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="rus">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>GoIT Homework 1</title>
 </head>
 
 
 <body>
-    
+    <header>
+        <img src="./images/WebStudio.svg" alt="Лого компании">
+        <ul>
+            <li> <a href="" >Студия</a> </li>
+            <li> <a href="" >Портфолио</a> </li>
+            <li> <a href="" >Контакты</a> </li>
+        </ul>
+        <ul> 
+            <li> <address> <a href="mailto:info@devstudio.com">info@devstudio.com</a> </address> </li>
+            <li> <address> <a href="tel:+380961111111"></a>+38 096 111 11 11</address></li>
+        </ul>
+    </header>
 </body>
 </html>
