--- a/index.html
+++ b/index.html
@@ -9,16 +9,45 @@
 
 <body>
     <header>
-        <img src="./images/WebStudio.svg" alt="Лого компании">
-        <ul>
-            <li> <a href="" >Студия</a> </li>
-            <li> <a href="" >Портфолио</a> </li>
-            <li> <a href="" >Контакты</a> </li>
-        </ul>
-        <ul> 
-            <li> <address> <a href="mailto:info@devstudio.com">info@devstudio.com</a> </address> </li>
-            <li> <address> <a href="tel:+380961111111"></a>+38 096 111 11 11</address></li>
-        </ul>
+        <nav>
+            <img src="./images/WebStudio.svg" alt="Лого компании">
+            <ul>
+                <li> <a href="" >Студия</a> </li>
+                <li> <a href="" >Портфолио</a> </li>
+                <li> <a href="" >Контакты</a> </li>
+            </ul>
+            <ul> 
+                <li> <address> <a href="mailto:info@devstudio.com">info@devstudio.com</a> </address> </li>
+                <li> <address> <a href="tel:+380961111111"></a>+38 096 111 11 11</address></li>
+            </ul>
+        </nav>
     </header>
+    <!--Баннер-->
+    <div></div>
+    <section>
+        <h1>Эффективные решения для вашего бизнеса</h1>
+        <a a href="" >Заказать услугу</a>
+    </section>
+    <section>
+        <ul>
+            <li><h3>Внимание к деталям</h3>
+            <p> Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
+            </li>
+            <li><h3>Пунктуальность</h3>
+            <p> Задача организации, в особенности же рамки и место обучения кадров влечет за собой.</p>
+            </li>
+            <li><h3>Планирование</h3>
+            <p> Равным образом консультация с широким активом в значительной степени обуславливает.</p>
+            </li>
+            <li><h3>Современные технологии</h3>
+            <p> Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
+            </li>
+        </ul>
+        <h2>Чем мы занимаемся</h2>
+        <img src="./images/img.svg" width="370">
+        <img src="./images/img (3).svg" width="370">
+        <img src="./images/img (1).svg" width="370">
+    </section>
+
 </body>
 </html>
