--- a/index.html
+++ b/index.html
@@ -48,6 +48,15 @@
         <img src="./images/img (3).svg" width="370">
         <img src="./images/img (1).svg" width="370">
     </section>
+    <section>
+        <h2>Наша команда</h2>
+        <ul>
+            <li><img src="./images/img (4).svg" width="270"><h3>Игорь Демьяненко</h3><p>Product Designer</p> </li>
+            <li><img src="./images/img (5).svg" width="270"><h3>Ольга Репина</h3><p>Frontend Developer</p></li>
+            <li><img src="./images/img (6).svg" width="270"><h3>Николай Тарасов</h3><p>Marketing</p></li>
+            <li><img src="./images/img (7).svg" width="270"><h3>Михаил Ермаков</h3><p>UI Designer</p></li>
+        </ul>
+    </section>
 
 </body>
 </html>
