--- a/index.html
+++ b/index.html
@@ -18,45 +18,56 @@
             </ul>
             <ul> 
                 <li> <address> <a href="mailto:info@devstudio.com">info@devstudio.com</a> </address> </li>
-                <li> <address> <a href="tel:+380961111111"></a>+38 096 111 11 11</address></li>
+                <li> <address> <a href="tel:+380961111111">+38 096 111 11 11</a></address></li>
             </ul>
         </nav>
     </header>
-    <!--Баннер-->
-    <div></div>
-    <section>
-        <h1>Эффективные решения для вашего бизнеса</h1>
-        <a a href="" >Заказать услугу</a>
-    </section>
-    <section>
-        <ul>
-            <li><h3>Внимание к деталям</h3>
-            <p> Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
-            </li>
-            <li><h3>Пунктуальность</h3>
-            <p> Задача организации, в особенности же рамки и место обучения кадров влечет за собой.</p>
-            </li>
-            <li><h3>Планирование</h3>
-            <p> Равным образом консультация с широким активом в значительной степени обуславливает.</p>
-            </li>
-            <li><h3>Современные технологии</h3>
-            <p> Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
-            </li>
-        </ul>
-        <h2>Чем мы занимаемся</h2>
-        <img src="./images/img.svg" width="370">
-        <img src="./images/img (3).svg" width="370">
-        <img src="./images/img (1).svg" width="370">
-    </section>
-    <section>
-        <h2>Наша команда</h2>
-        <ul>
-            <li><img src="./images/img (4).svg" width="270"><h3>Игорь Демьяненко</h3><p>Product Designer</p> </li>
-            <li><img src="./images/img (5).svg" width="270"><h3>Ольга Репина</h3><p>Frontend Developer</p></li>
-            <li><img src="./images/img (6).svg" width="270"><h3>Николай Тарасов</h3><p>Marketing</p></li>
-            <li><img src="./images/img (7).svg" width="270"><h3>Михаил Ермаков</h3><p>UI Designer</p></li>
-        </ul>
-    </section>
-
+    <main>
+        <!--Баннер-->
+        <div></div>
+        <section>
+            <h1>Эффективные решения для вашего бизнеса</h1>
+            <a a href="" >Заказать услугу</a>
+        </section>
+        <section>
+            <ul>
+                <li><h3>Внимание к деталям</h3>
+                <p> Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
+                </li>
+                <li><h3>Пунктуальность</h3>
+                <p> Задача организации, в особенности же рамки и место обучения кадров влечет за собой.</p>
+                </li>
+                <li><h3>Планирование</h3>
+                <p> Равным образом консультация с широким активом в значительной степени обуславливает.</p>
+                </li>
+                <li><h3>Современные технологии</h3>
+                <p> Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
+                </li>
+            </ul>
+            <h2>Чем мы занимаемся</h2>
+            <img src="./images/img.svg" width="370">
+            <img src="./images/img (3).svg" width="370">
+            <img src="./images/img (1).svg" width="370">
+        </section>
+        <section>
+            <h2>Наша команда</h2>
+            <ul>
+                <li><img src="./images/img (4).svg" width="270"><h3>Игорь Демьяненко</h3><p>Product Designer</p> </li>
+                <li><img src="./images/img (5).svg" width="270"><h3>Ольга Репина</h3><p>Frontend Developer</p></li>
+                <li><img src="./images/img (6).svg" width="270"><h3>Николай Тарасов</h3><p>Marketing</p></li>
+                <li><img src="./images/img (7).svg" width="270"><h3>Михаил Ермаков</h3><p>UI Designer</p></li>
+            </ul>
+        </section>
+        <footer>
+            <nav>
+                <img src="./images/WebStudio.svg" alt="Лого компании">
+                <ul> 
+                    <li> <address> <a href="https://goo.gl/maps/Ae1zcUtkZR1KB5ff6">г. Киев, пр-т Леси Украинки, 26</a></address></li>
+                    <li> <address> <a href="mailto:info@devstudio.com">info@devstudio.com</a> </address> </li>
+                    <li> <address> <a href="tel:+380961111111">+38 096 111 11 11</a></address></li>
+                </ul>
+            </nav>
+      </footer>
+    </main>
 </body>
 </html>
