--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
                 <li> <a href="" >Контакты</a> </li>
             </ul>
             <ul> 
-                <li> <address> <a href="mailto:info@devstudio.com">info@devstudio.com</a> </address> </li>
-                <li> <address> <a href="tel:+380961111111">+38 096 111 11 11</a></address></li>
+                <li> <a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+                <li> <a href="tel:+380961111111">+38 096 111 11 11</a></li>
             </ul>
         </nav>
     </header>
@@ -63,8 +63,8 @@
                 <img src="./images/WebStudio.svg" alt="Лого компании">
                 <ul> 
                     <li> <address> <a href="https://goo.gl/maps/Ae1zcUtkZR1KB5ff6">г. Киев, пр-т Леси Украинки, 26</a></address></li>
-                    <li> <address> <a href="mailto:info@devstudio.com">info@devstudio.com</a> </address> </li>
-                    <li> <address> <a href="tel:+380961111111">+38 096 111 11 11</a></address></li>
+                    <li>  <a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+                    <li>  <a href="tel:+380961111111">+38 096 111 11 11</a></li>
                 </ul>
             </nav>
       </footer>
