Address+footer changes

--- a/index.html
+++ b/index.html
@@ -58,15 +58,15 @@
                 <li><img src="./images/img (7).svg" width="270"><h3>Михаил Ермаков</h3><p>UI Designer</p></li>
             </ul>
         </section>
-        <footer>
-            <nav>
-                <img src="./images/WebStudio.svg" alt="Лого компании">
-                <ul> 
-                    <li> <address> <a href="https://goo.gl/maps/Ae1zcUtkZR1KB5ff6">г. Киев, пр-т Леси Украинки, 26</a></address></li>
+        <footer> 
+            <img src="./images/WebStudio.svg" alt="Лого компании">
+            <address>
+              <ul> 
+                    <li> <a href="https://goo.gl/maps/Ae1zcUtkZR1KB5ff6">г. Киев, пр-т Леси Украинки, 26</a></li>
                     <li>  <a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
                     <li>  <a href="tel:+380961111111">+38 096 111 11 11</a></li>
-                </ul>
-            </nav>
+              </ul>
+            </address>
       </footer>
     </main>
 </body>
