--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="rus">
+<html lang="ru">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -10,16 +10,16 @@
 <body>
     <header>
         <nav>
-            <img src="./images/WebStudio.svg" alt="Лого компании">
+            <p>WebStudio</p>
             <ul>
                 <li> <a href="" >Студия</a> </li>
                 <li> <a href="" >Портфолио</a> </li>
                 <li> <a href="" >Контакты</a> </li>
             </ul>
-            <ul> 
-                <li> <a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-                <li> <a href="tel:+380961111111">+38 096 111 11 11</a></li>
-            </ul>
+             
+            <a href="mailto:info@devstudio.com">info@devstudio.com</a>
+            <a href="tel:+380961111111">+38 096 111 11 11</a>
+           
         </nav>
     </header>
     <main>
@@ -27,7 +27,7 @@
         <div></div>
         <section>
             <h1>Эффективные решения для вашего бизнеса</h1>
-            <a a href="" >Заказать услугу</a>
+            <a href="" >Заказать услугу</a>
         </section>
         <section>
             <ul>
@@ -45,21 +45,21 @@
                 </li>
             </ul>
             <h2>Чем мы занимаемся</h2>
-            <img src="./images/img.svg" width="370">
-            <img src="./images/img (3).svg" width="370">
-            <img src="./images/img (1).svg" width="370">
+            <img src="./images/img.svg" alt="Photo 1" width="370">
+            <img src="./images/img-3.svg" alt="Photo 2" width="370">
+            <img src="./images/img-1.svg" alt="Photo 3" width="370">
         </section>
         <section>
             <h2>Наша команда</h2>
             <ul>
-                <li><img src="./images/img (4).svg" width="270"><h3>Игорь Демьяненко</h3><p>Product Designer</p> </li>
-                <li><img src="./images/img (5).svg" width="270"><h3>Ольга Репина</h3><p>Frontend Developer</p></li>
-                <li><img src="./images/img (6).svg" width="270"><h3>Николай Тарасов</h3><p>Marketing</p></li>
-                <li><img src="./images/img (7).svg" width="270"><h3>Михаил Ермаков</h3><p>UI Designer</p></li>
+                <li><img src="./images/img-4.svg" alt="Photo" width="270"><h3>Игорь Демьяненко</h3><p>Product Designer</p> </li>
+                <li><img src="./images/img-5.svg" alt="Photo" width="270"><h3>Ольга Репина</h3><p>Frontend Developer</p></li>
+                <li><img src="./images/img-6.svg" alt="Photo" width="270"><h3>Николай Тарасов</h3><p>Marketing</p></li>
+                <li><img src="./images/img-7.svg" alt="Photo" width="270"><h3>Михаил Ермаков</h3><p>UI Designer</p></li>
             </ul>
         </section>
         <footer> 
-            <img src="./images/WebStudio.svg" alt="Лого компании">
+            <p>WebStudio</p>
             <address>
               <ul> 
                     <li> <a href="https://goo.gl/maps/Ae1zcUtkZR1KB5ff6">г. Киев, пр-т Леси Украинки, 26</a></li>
