--- a/index.html
+++ b/index.html
@@ -10,17 +10,15 @@
 <body>
     <header>
         <nav>
-            <p>WebStudio</p>
+            <a href=""> <img src="./images/WebStudio.svg" alt="Лого"/></a>
             <ul>
-                <li> <a href="" >Студия</a> </li>
-                <li> <a href="" >Портфолио</a> </li>
-                <li> <a href="" >Контакты</a> </li>
+                <li><a href="" >Студия</a></li>
+                <li><a href="" >Портфолио</a></li>
+                <li><a href="" >Контакты</a></li>
             </ul>
-             
-            <a href="mailto:info@devstudio.com">info@devstudio.com</a>
-            <a href="tel:+380961111111">+38 096 111 11 11</a>
-           
         </nav>
+        <a href="mailto:info@devstudio.com">info@devstudio.com</a>
+        <a href="tel:+380961111111">+38 096 111 11 11</a>
     </header>
     <main>
         <!--Баннер-->
@@ -59,7 +57,12 @@
             </ul>
         </section>
         <footer> 
-            <p>WebStudio</p>
+            <a href="">
+                <img
+                  src="./images/WebStudio.svg"
+                  alt="Лого"
+                />
+              </a>
             <address>
               <ul> 
                     <li> <a href="https://goo.gl/maps/Ae1zcUtkZR1KB5ff6">г. Киев, пр-т Леси Украинки, 26</a></li>
