--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <header>
         <nav>
-            <a href=""> <img src="./images/WebStudio.svg" alt="Лого"/></a>
+            <a href="">WebStudio</a>
             <ul>
                 <li><a href="" >Студия</a></li>
                 <li><a href="" >Портфолио</a></li>
@@ -57,12 +57,7 @@
             </ul>
         </section>
         <footer> 
-            <a href="">
-                <img
-                  src="./images/WebStudio.svg"
-                  alt="Лого"
-                />
-              </a>
+            <a href="">WebStudio</a>
             <address>
               <ul> 
                     <li> <a href="https://goo.gl/maps/Ae1zcUtkZR1KB5ff6">г. Киев, пр-т Леси Украинки, 26</a></li>
